Updated info with a section on RFC compliance.

--- a/info/vm.texinfo
+++ b/info/vm.texinfo
@@ -1638,7 +1638,7 @@ would get loaded as a text file by default, and then run @kbd{M-x
 mail-mode}.  VM's mail-mode command keys are not available in this mode.
 The best option is to run @kbd{M-x vm-postpone-message} to save the
 unfinished message composition and then continue it using
-@code{vm-continue-postponed-message}.  @xref{Add-ons, VM-Pine: Postponing message composition}.
+@code{vm-continue-postponed-message}.  @xref{Add-ons, VM-Pine}.
 
 @unnumberedsubsec Recovering Sessions
 
@@ -6840,7 +6840,7 @@ putting @code{vm-mime-auto-save-all-attachments} in
 
 @node Add-ons, History and Administration, Customizations, Top
 @chapter Add-ons
-@section VM-Pine: Postponing message composition
+@section VM-Pine
 @cindex vm-pine
 @cindex postponing message composition
 Sometimes, you might want to interrupt the composing of a message and
@@ -7697,13 +7697,9 @@ The reason for their separation is historical.
 @node Message Internals, Summary Internals, Folder Internals, Internals
 @section Message Internals
 
-The format of the mail messages is as described in RFC 822.  There is an
-updated standard, RFC 2822 dated April 2001.  It is not known whether these
-updates have been incorporated in VM.
-
-The message bodies can be in the MIME format, as described in RFC 2045, 2046
-and 2047.  The newer extensions (RFC 2184, 2231, 5335) are not incorporated
-in VM.  International email headers (RFC 6532) are also not supported.
+The format of the mail messages is as described in RFC 822. The message
+bodies can be in the MIME format, as described in RFC 2045, 2046 and
+2047. See @xref{Message Internals, RFC compliance}.
 
 The message data structure is a vector containing various pieces of
 data about the message, some of which is permanent and some that is
@@ -8285,6 +8281,45 @@ in general be different from the threads in the underlying folders.)
 The other sub-vectors are shared with the underlying real folders.  (In
 particular, the tokenized summary line is the same in the virtual
 folders and their underlying folders.)
+
+@subsection RFC compliance
+The format of the mail messages is as described in RFC 822.  
+@itemize
+@item
+RFC 822. Standard for the format of ARPA Internet text messages. August 1982.
+@item
+RFC 2822. Internet Message Format (proposed). April 2001.
+@item
+RFC 5322. Internet Message Format (standard). October 2008.
+@end itemize
+@noindent It is not known whether the updates of RFC 5322 have been
+incorporated in VM. 
+
+The message bodies can be in the MIME format, as described in RFC 2045, 2046
+and 2047.
+@itemize
+@item 
+RFC 2045. Format of Internet Message Bodies. November 1996.
+@item 
+RFC 2046. Media Types. November 1996.
+@item 
+RFC 2047. Message Header Extensions for NON-ASCII
+Text. November 1996.
+@item
+RFC 2048. Registration Procedures. November 1996.
+@item
+RFC 2049. Conformance Criteria and Examples. November 1996.
+@end itemize
+@noindent The following updates that have been made to the original MIME
+standards have not been implemented in VM.
+@itemize
+@item
+RFC 2231. MIME Parameter Value and Encoded Word Extensions. November 1997.
+@item
+RFC 5335. Internationalized Email Headers (Experimental). September 2008.
+@item
+RFC 6532. Internationalized Email Headers (Proposed). February 2012.
+@end itemize
 
 
 @node Summary Internals, Threading Internals, Message Internals, Internals
